--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -6,6 +6,7 @@
     height: 700px;
     background-color: #efefef;
     margin: 0 auto;
+    border-radius: 15px;
   }
 
   // Customize our own hotspot
@@ -25,7 +26,7 @@
   .HotspotAnnotation {
     visibility: hidden;
     background: #fff;
-    border-radius: 4px;
+    border-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     color: rgba(0, 0, 0, 0.8);
     display: block;
@@ -35,7 +36,7 @@
     left: calc(100% + 1em);
     max-width: 300px;
     overflow-wrap: break-word;
-    padding: 0.5em 1em;
+    padding: 20px;
     position: absolute;
     top: 50%;
     width: max-content;
@@ -45,12 +46,15 @@
   .HotspotAnnotation p {
     color: #333;
     line-height: 22px;
+    font-size: 14px;
     font-weight: 300;
+    opacity: .75;
+    font-style: italic;
   }
 
-  .HotspotAnnotation h2 {
+  .HotspotAnnotation h3 {
     font-size: 18px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   .HotspotAnnotation img {
@@ -58,8 +62,8 @@
   }
 
   model-viewer::part(default-progress-bar) {
-    height: 30px;
-    background-color: #E89B36;
+    height: 10px;
+    background-color: black;
   }
 
   /* AR Rules */
