--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,4 +1,4 @@
 // Import variables from the main variables partial
-@forward 'typo';
+@forward 'general';
 @forward 'ar-model';
 @forward 'loader';
