--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -9,6 +9,7 @@
     border-radius: 15px;
   }
 
+
   // Customize our own hotspot
   .Hotspot {
     background: url(../images/hotspot.svg) center no-repeat;
@@ -33,13 +34,13 @@
     font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 18px;
     font-weight: 700;
-    left: calc(100% + 1em);
+    left: 15px;
     max-width: 300px;
     overflow-wrap: break-word;
     padding: 20px;
     position: absolute;
-    top: 50%;
-    width: max-content;
+    top: 25px;
+    width: 200px;
     text-align: left;
   }
 
@@ -59,6 +60,8 @@
 
   .HotspotAnnotation img {
     max-width: 250px;
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 
   model-viewer::part(default-progress-bar) {
@@ -136,3 +139,49 @@
   model-viewer>#ar-prompt>img {
     animation: circle 4s linear infinite;
   }
+
+  /* ---Tablet Styles--- */
+@media screen and (min-width: 768px) {
+  .HotspotAnnotation {
+    visibility: hidden;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    color: rgba(0, 0, 0, 0.8);
+    display: block;
+    font-family: Futura, Helvetica Neue, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    left: calc(100% + 1em);
+    max-width: 300px;
+    overflow-wrap: break-word;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    width: 400px;
+    text-align: left;
+  }
+}
+
+// ---Desktop Styles---
+@media screen and (min-width: 1200px) {
+  .HotspotAnnotation {
+    visibility: hidden;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    color: rgba(0, 0, 0, 0.8);
+    display: block;
+    font-family: Futura, Helvetica Neue, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    left: calc(100% + 1em);
+    max-width: 300px;
+    overflow-wrap: break-word;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    width: 750px;
+    text-align: left;
+  }
+}
