Design and Images update
In this commit, I added images, footer and a header to my document. Also input images as thumbnail on the hotspots.

--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -7,7 +7,7 @@ h2 {
   background: rgb(50, 50, 50);
   color: white;
   padding: 10px 20px 10px 20px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   border-radius: 15px;
   box-shadow: 3px 3px 6px 3px rgba(0, 0, 0, 0.15);
 }
@@ -50,5 +50,52 @@ h2 {
     margin-left: 5px;
     padding: 15px 20px;
     border-radius: 15px;
+  }
+}
+
+#introduction {
+  margin-top: 50px;
+  margin-bottom: 0px;
+}
+
+.intro-heading {
+  background-color: white;
+  color: rgb(50, 50, 50);
+  box-shadow: 0px 0px 0px 0px white;
+  padding: 0px;
+  font-size: 42px;
+  font-weight: 800;
+}
+
+.p-heading {
+  max-width: 750px;
+  font-size: 22px;
+  padding-left: 25px;
+  border-left: grey 2px solid;
+  color: grey;
+}
+
+.copy-heading {
+  font-size: 20px;
+  font-weight: 800;
+  color: rgb(50, 50, 50);
+  margin-top: 50px;
+  opacity: .8;
+}
+
+#footer {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-top: rgba(128, 128, 128, 0.497) 2px solid;
+  padding-top: 50px;
+
+  h3 {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
+
+  p {
+    font-size: 13px;
+    max-width: 775px;
   }
 }
